<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgfondo"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textBoxClave"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="12"
        android:hint="@string/textBoxClave"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBoxUsuario"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textBoxUsuario"
        app:layout_constraintTop_toBottomOf="@+id/textBoxUsuario"
        app:layout_constraintVertical_bias="0.0"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/textBoxUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="348dp"
        android:ems="12"
        android:hint="@string/textBoxUsuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnAcceder"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:onClick="btnAcceder"
        android:text="@string/btnAcceder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textBoxClave"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="@+id/textBoxClave"
        app:layout_constraintTop_toBottomOf="@+id/textBoxClave"
        app:layout_constraintVertical_bias="0.301" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="318dp"
        android:layout_height="84dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/imgLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imglogo" />

    <ImageView
        android:id="@+id/imgHuellaDigital"
        android:layout_width="224dp"
        android:layout_height="267dp"
        app:layout_constraintBottom_toTopOf="@+id/textBoxUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?android:attr/fingerprintAuthDrawable"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/TextOlvidaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textOlvidaste"
        app:layout_constraintBottom_toTopOf="@+id/btnAcceder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBoxClave"
        app:layout_constraintVertical_bias="0.607" />

</androidx.constraintlayout.widget.ConstraintLayout>